--- a/src/app/components/employee-edit/employee-edit.component.html
+++ b/src/app/components/employee-edit/employee-edit.component.html
@@ -1,1 +1,27 @@
-<p>employee-edit works!</p>
+<div class="container">
+  <h2>Editar Funcionário</h2>
+  <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label>Nome</label>
+      <input type="text" class="form-control" formControlName="firstName">
+    </div>
+    <div class="form-group">
+      <label>Sobrenome</label>
+      <input type="text" class="form-control" formControlName="lastName">
+    </div>
+    <div class="form-group">
+      <label>Email</label>
+      <input type="email" class="form-control" formControlName="email">
+    </div>
+    <div class="form-group">
+      <label>Endereço</label>
+      <input type="text" class="form-control" formControlName="address">
+    </div>
+    <div class="form-group">
+      <label>Telefone</label>
+      <input type="text" class="form-control" formControlName="phone">
+    </div>
+    <button type="submit" class="btn btn-warning mt-3">Atualizar</button>
+    <button type="button" class="btn btn-secondary mt-3 ms-2" (click)="goBack()">Cancelar</button>
+  </form>
+</div>
